fixing shifting issue in page of on scroll images

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ canvas{
 #loop{
     display: flex;
     position: absolute;
-    top: 40%;
+    top: 42.5%;
     height: 25%;
     width: 100%;
     font-size: 100px;
@@ -91,7 +91,7 @@ canvas{
 #loop>h1{
     font-weight: 300;
     animation-name: anim;
-    animation-duration: 20s;
+    animation-duration: 24s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -119,10 +119,12 @@ canvas{
     padding: 0px 30px;
     z-index: 9;
     color: #fff;
-    font-family: 'Urbanist', sans-serif;
+
 }
 #nav>h3 {
     font-size: 22px;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 120px;
 }
 
 #nav>button {
@@ -132,11 +134,61 @@ canvas{
     color: #fff;
     border: none;
 }
-#page>h3{
+/* .h3-style1{
     position: absolute;
-    top: 55%;
+    top: 58%;
     font-family: 'Urbanist', sans-serif;
     color: #cacaca;
+    font-weight: 500;
     left: 5%;
+    font-size: 14px; 
+    letter-spacing: 0px;
 }
-
+.h3-style2 {
+    position: absolute;
+    top: 58%;
+    font-family: 'Urbanist', sans-serif;
+    color: #cacaca;
+    font-weight: 500;
+    right: 5%;
+    text-align: right;
+    font-size: 14px;
+}
+.h3-style3 {
+    position: absolute;
+    top: 60.5%;
+    font-family: 'Urbanist', sans-serif;
+    color: #cacaca;
+    font-weight: 500;
+    left: 5%;
+    font-size: 14px;  
+}
+.h3-style4 {
+    position: absolute;
+    top: 60.5%;
+    font-family: 'Urbanist', sans-serif;
+    color: #cacaca;
+    font-weight: 500;
+    right: 5%;
+    text-align: right;
+    font-size: 14px;
+}
+.h3-style5 {
+    position: absolute;
+    top: 63%;
+    font-family: 'Urbanist', sans-serif;
+    color: #cacaca;
+    font-weight: 500;
+    left: 5%;
+    font-size: 14px;  
+} */
+#page>h4 {
+    position: absolute;
+    top: 65%;
+    font-family: 'Urbanist', sans-serif;
+    color: #cacaca;
+    font-weight: 400;
+    right: 5%;
+    text-align: right;
+    font-size: 14px;
+}
